--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Tanya Phung"
+  name             : 
   avatar           : "profile.jpg"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : 
+  location         : 
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=EijP8_IAAAAJ&hl=en"
   email            :
