--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : 
-  avatar           : "profile.jpg"
+  avatar           : "tnp_profile.jpg"
   bio              : 
   location         : 
   employer         :
